ansible/roles/media_stack/templates/beets/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beets
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /media/beets
            pathType: Prefix
            backend:
              service:
                name: beets
                port:
                  number: 8337
